--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 		<section id="home" class="welcome-hero">
 			<div class="container">
 				<div class="welcome-hero-txt">
-					<h2>This Edite by Raziq to check CICD Pipeline Jenkins <br> that all you need </h2>
+					<h2>Nwo these liness changed by Salaman<br> that all you need </h2>
 					<p>
 						Find Best Place, Restaurant, Hotel, Real State and many more think in just One click 
 					</p>
